--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,20 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DashboardController!{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Welcome to the Dashboard!</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/DRYL'S/SECURITY/Security/src/Controller/DashboardController.php</code></li>
-        <li>Your template at <code>C:/Users/DRYL'S/SECURITY/Security/templates/dashboard/index.html.twig</code></li>
-    </ul>
+    {% if is_granted('ROLE_ADMIN') %}
+        <p class="admin">You are logged in as Admin. You have full access.</p>
+    {% elseif is_granted('ROLE_USER') %}
+        <p class="user">You are logged in as Regular User. Limited access granted.</p>
+    {% endif %}
+
+    
 </div>
 {% endblock %}
